logs/virtstrap-custom-script.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/virtstrap'...
Compiling './lib/python3.5/site-packages/virtstrap/basecommand.py'...
***   File "./lib/python3.5/site-packages/virtstrap/basecommand.py", line 43
    except SystemExit, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/virtstrap/commands'...
Compiling './lib/python3.5/site-packages/virtstrap/hooks.py'...
***   File "./lib/python3.5/site-packages/virtstrap/hooks.py", line 26
    except SystemExit, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/virtstrap/packages'...
Listing './lib/python3.5/site-packages/virtstrap/packages/simpleyaml'...
Compiling './lib/python3.5/site-packages/virtstrap/packages/simpleyaml/constructor.py'...
***   File "./lib/python3.5/site-packages/virtstrap/packages/simpleyaml/constructor.py", line 130
    except TypeError, exc:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/virtstrap/packages/simpleyaml/reader.py'...
***   File "./lib/python3.5/site-packages/virtstrap/packages/simpleyaml/reader.py", line 158
    except UnicodeDecodeError, exc:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/virtstrap/packages/simpleyaml/resolver.py'...
***   File "./lib/python3.5/site-packages/virtstrap/packages/simpleyaml/resolver.py", line 171
    re.compile(ur'''^(?:yes|Yes|YES|no|No|NO
                    |true|True|TRUE|false|False|FALSE
                    |on|On|ON|off|Off|OFF)$''', re.X),
                                            
                                                     
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/virtstrap/packages/simpleyaml/scanner.py'...
***   File "./lib/python3.5/site-packages/virtstrap/packages/simpleyaml/scanner.py", line 1427
    except UnicodeDecodeError, exc:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/virtstrap/packages/tempita'...
Compiling './lib/python3.5/site-packages/virtstrap/packages/tempita/__init__.py'...
***   File "./lib/python3.5/site-packages/virtstrap/packages/tempita/__init__.py", line 295
    except SyntaxError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/virtstrap/templates'...
Listing './lib/python3.5/site-packages/virtstrap/templates/init'...
Listing './lib/python3.5/site-packages/virtstrap/testing'...
Compiling './lib/python3.5/site-packages/virtstrap/utils.py'...
***   File "./lib/python3.5/site-packages/virtstrap/utils.py", line 48
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/virtstrap_core-0.3.16.egg-info'...
Listing './lib/python3.5/site-packages/virtstrap_custom_script'...
Listing './lib/python3.5/site-packages/virtstrap_custom_script-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/virtstrap_local'...
Listing './lib/python3.5/site-packages/virtstrap_local/commands'...
Listing './lib/python3.5/site-packages/virtstrap_local-0.3.16.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
